test/ingress/wildcard/kustomization.yaml
---
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

namespace: ingress-test

resources:
- ingress.yaml
- ../../../ingress/manual-certificates/domain-info/

replacements:
- source:
    kind: ConfigMap
    name: main-domain-info
    fieldPath: data.domain_suffix
  targets:
  - select:
      kind: Ingress
      name: echo-wildcard
    options:
      delimiter: .
      index: 1
    fieldPaths:
    - spec.rules.0.host
- source:
    kind: ConfigMap
    name: main-domain-info
    fieldPath: data.secret_name
  targets:
  - select:
      kind: Ingress
      name: echo-wildcard
    fieldPaths:
    - spec.tls.0.secretName
